--- a/templates/include/_sidebar_profile.html.twig
+++ b/templates/include/_sidebar_profile.html.twig
@@ -1,6 +1,6 @@
 {% block aside %}
 <aside class="col-md-3">
-    <div class="sidebar">
+    <div class="sidebar-profile">
         <ul>
             <a href="{{ path('profile', {'id': app.user.id}) }}"><li>Mes Informations</li></a>
             <a href="#"><li>Mon équipe favorite</li></a>
