--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -222,6 +222,8 @@ span.leftbar {
     box-sizing: border-box;
     align-items: center;
     padding: 1em;
+    /* height: 100%;
+    width: 5em; */
 }
 
 /* .navbar-media {
