started adding create for staff and news

--- a/templates/admin/news.html.twig
+++ b/templates/admin/news.html.twig
@@ -62,7 +62,7 @@
                         </tr>
                     {% endfor %}
                 </table>
-                <button class='btn btn-primary clickable' onclick="window.location='#'">Créer une nouvelle News</button>
+                <button class='btn btn-primary clickable' onclick="window.location='{{ path('admin_news_new') }}'">Créer une nouvelle News</button>
                 </div>
         </main>
     </div>
