--- a/templates/admin/events.html.twig
+++ b/templates/admin/events.html.twig
@@ -7,9 +7,9 @@
 <div class="container-fluid">
     
     <div class="full-height flex align-items-center">
-        {{ include ("include/_admin_sidepanel.html.twig") }}
+        {{ include ("include/admin/_admin_sidepanel.html.twig") }}
         <main class="col-md-8 full-height">
-            {{ include('include/_admin_title.html.twig') }}
+            {{ include('include/admin/_admin_title.html.twig') }}
                 <div class="card">
                 <h1 class="display-2">Gestion des Événements</h1>
                 <table class="table table-striped table-dark table-hover">
