refactored more includes

--- a/templates/admin/events_edit.html.twig
+++ b/templates/admin/events_edit.html.twig
@@ -69,6 +69,6 @@
 </div>
 {% block javascripts %}
     {{ parent() }}
-    {{ include('include/_admin_js.html.twig') }}
+    {{ include('include/admin/_admin_js.html.twig') }}
 {% endblock %}
 {% endblock content %}
