--- a/templates/admin/news_new.html.twig
+++ b/templates/admin/news_new.html.twig
@@ -15,7 +15,13 @@
                     <table class="table table-striped table-dark table-hover">
                         <tbody>
                             <tr>
-                                <th>Utilisateur·ice lié·e</th>
+                                <th>Titre</th>
+                                <td>
+                                    {{ form_widget(form.title) }}
+                                </td>
+                            </tr>
+                            <tr>
+                                <th>Utilisateur·rice lié·e</th>
                                 <td>
                                     {{ form_widget(form.user) }}
                                 </td>
@@ -33,12 +39,6 @@
                                 </td>
                             </tr>
                             <tr>
-                                <th>Titre</th>
-                                <td>
-                                    {{ form_widget(form.title) }}
-                                </td>
-                            </tr>
-                            <tr>
                                 <th>Contenu</th>
                                 <td>
                                     {{ form_widget(form.content) }}
@@ -51,26 +51,14 @@
                                 </td>
                             </tr>
                             <tr hidden>
-                                <th>Slug</th>
-                                <td>
-                                    {{ form_widget(form.slug) }}
-                                </td>
-                            </tr>
-                            <tr hidden>
                                 <th>Créée le</th>
                                 <td>
                                     {{ form_widget(form.createdAt) }}
                                 </td>
                             </tr>
-                            <tr hidden>
-                                <th>MàJ le</th>
-                                <td>
-                                    {{ form_widget(form.updatedAt) }}
-                                </td>
-                            </tr>
                         </tbody>
                     </table>
-                        <button class='btn btn-primary' id='admin_save_button' type="submit">Sauvegarder</button>
+                    <button class='btn btn-primary' id='admin_save_button' type="submit">Sauvegarder</button>
                 {{ form_end(form) }}
                 </div>
         </main>
