added admin class to cards

--- a/templates/admin/news_new.html.twig
+++ b/templates/admin/news_new.html.twig
@@ -9,7 +9,7 @@
         {{ include ("include/admin/_admin_sidepanel.html.twig") }}
         <main class="col-md-8 full-height">
             {{ include('include/admin/_admin_title.html.twig') }}
-                <div class="card">
+                <div class="card admin">
                 <h1 class="display-2">Nouvelle News</h1>
                     {{ form_start(form, {attr: {class: 'form-user-submit'}}) }}
                     <table class="table table-striped table-dark table-hover">
