--- a/templates/include/admin/_admin_sidepanel.html.twig
+++ b/templates/include/admin/_admin_sidepanel.html.twig
@@ -2,13 +2,13 @@
     <aside class="col-md-3">
         <div class="sidebar">
             <ul>
-                <a href="{{ path('admin_users') }}"><li id='select_users'>Utilisateurs</li></a>
-                <a href="{{ path('admin_staff') }}"><li id='select_staff'>Staff</li></a>
-                <a href="{{ path('admin_news') }}"><li id='select_news'>News</li></a>
-                <a href="{{ path('admin_players') }}"><li id='select_players'>Joueurs·euses</li></a>
-                <a href="{{ path('admin_teams') }}"><li id='select_teams'>Équipes</li></a>
-                <a href="{{ path('admin_results') }}"><li id='select_results'>Résultats</li></a>
-                <a href="{{ path('admin_events') }}"><li id='select_events'>Événements</li></a>
+                <a href="{{ path('admin_users') }}"><li id='select_users' class="red-bar-on-hover">Utilisateurs</li></a>
+                <a href="{{ path('admin_staff') }}"><li id='select_staff' class="red-bar-on-hover">Staff</li></a>
+                <a href="{{ path('admin_news') }}"><li id='select_news' class="red-bar-on-hover">News</li></a>
+                <a href="{{ path('admin_players') }}"><li id='select_players' class="red-bar-on-hover">Joueurs·euses</li></a>
+                <a href="{{ path('admin_teams') }}"><li id='select_teams' class="red-bar-on-hover">Équipes</li></a>
+                <a href="{{ path('admin_results') }}"><li id='select_results' class="red-bar-on-hover">Résultats</li></a>
+                <a href="{{ path('admin_events') }}"><li id='select_events' class="red-bar-on-hover">Événements</li></a>
             </ul>
         </div>
     </aside>
