added line about disconnecting in public places

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -23,6 +23,10 @@
                     reflétées en temps réel sur la base de données. Manœuvrez avec la plus grande prudence, et,
                     en cas de doute, sollicitez une seconde opinion avant de procéder.
                 </p>
+                <p>
+                    N'oubliez pas de vous déconnecter après en avoir terminé si vous vous trouvez sur un ordinateur
+                    public ou non sécurisé.
+                </p>
                 </div>
         </main>
     </div>
