added logout button

--- a/templates/include/admin/_admin_sidepanel.html.twig
+++ b/templates/include/admin/_admin_sidepanel.html.twig
@@ -9,6 +9,7 @@
                 <a href="{{ path('admin_teams') }}"><li id='select_teams' class="red-bar-on-hover">Équipes</li></a>
                 <a href="{{ path('admin_results') }}"><li id='select_results' class="red-bar-on-hover">Résultats</li></a>
                 <a href="{{ path('admin_events') }}"><li id='select_events' class="red-bar-on-hover">Événements</li></a>
+                <a href="{{path('app_logout')}}"><li id="logout">Se déconnecter</li></a>
             </ul>
         </div>
     </aside>
