--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -142,6 +142,22 @@ span.leftbar {
     border-radius: 0;
 }
 
+.card.admin h1.display-2 {
+    margin-bottom: 2rem;
+}
+
+.card.admin p {
+    margin-bottom: 0.8rem;
+}
+
+.card.admin .lead {
+    margin-bottom: 1.2rem;
+}
+
+.card.admin input {
+    margin-bottom: 0px;
+}
+
 /******** Team ********/
 .card-team {
     height: 38px;
@@ -185,6 +201,7 @@ span.leftbar {
 }
 #logout{
     background-color: rgba(180, 0, 0, 0.8);
+    margin-top: 0.7rem;
     transition: 0.5s;
 }
 #logout:hover {
@@ -200,9 +217,12 @@ span.leftbar {
     list-style-type: none;
     margin: 0;
     border-right: 0px solid rgba(180, 0, 0, 0);
-    transition: 0.2s;
+    transition: 0.1s;
 }
 .sidebar .nav-media li:hover{
+    border-right: 3px solid rgba(180, 0, 0, 0.8);
+}
+.sidebar li.red-bar-on-hover:hover{
     border-right: 3px solid rgba(180, 0, 0, 0.8);
 }
 .sidebar ul {
