--- a/templates/admin/events_edit.html.twig
+++ b/templates/admin/events_edit.html.twig
@@ -25,6 +25,12 @@
                                 </td>
                             </tr>
                             <tr>
+                                <th>Créateur·ice</th>
+                                <td>
+                                    {{ form_widget(form.user) }}
+                                </td>
+                            </tr>
+                            <tr>
                                 <th>Description</th>
                                 <td>
                                     {{ form_widget(form.description) }}
