--- a/templates/admin/players.html.twig
+++ b/templates/admin/players.html.twig
@@ -64,7 +64,7 @@
                     {% endfor %}
                 </table>
                 <button class='btn btn-primary clickable'
-                        onclick="window.location='#'">Créer une nouvelle entrée</button>
+                        onclick="window.location='{{ path('admin_players_new') }}'">Créer une nouvelle entrée</button>
                 </div>
         </main>
     </div>
