--- a/templates/admin/events.html.twig
+++ b/templates/admin/events.html.twig
@@ -20,7 +20,6 @@
                             <th>Titre</th>
                             <th>Type</th>
                             <th>Date de début</th>
-                            <th>Date de fin</th>
                             <th>Emplacement</th>
                         </tr>
                     </thead>
@@ -30,8 +29,8 @@
                             style='cursor: pointer;'>
                             <td>{{ event.id }}</td>
                             <td>
-                            {% if event.user_id|default %}
-                                {{ event.user_id }}
+                            {% if event.user|default %}
+                                {{ event.user }}
                             {% else %}
                                 Non renseigné
                             {% endif %}
@@ -58,13 +57,6 @@
                             {% endif %}
                             </td>
                             <td>
-                            {% if  event.endDate|default %}
-                                {{ event.endDate|date('d/m/Y H:i') }}
-                            {% else %}
-                                Non renseignée
-                            {% endif %}
-                            </td>
-                            <td>
                             {% if  event.location|default %}
                                 {{ event.location }}
                             {% else %}
@@ -79,7 +71,7 @@
                         </tr>
                     {% endfor %}
                 </table>
-                <button class='btn btn-primary clickable' onclick="window.location='#'">Créer un nouvel événement</button>
+                <button class='btn btn-primary clickable' onclick="window.location='{{ path('admin_events_new') }}'">Créer un nouvel événement</button>
                 </div>
         </main>
     </div>
