--- a/templates/admin/events_new.html.twig
+++ b/templates/admin/events_new.html.twig
@@ -10,50 +10,50 @@
         <main class="col-md-8 full-height">
             {{ include('include/admin/_admin_title.html.twig') }}
                 <div class="card admin">
-                <h1 class="display-2">Nouveau Staff</h1>
-                    {{ form_start(form, {attr: {class: 'form-user-submit'}}) }}
+                <h1 class="display-2">Gestion des Événements</h1>
+                    {{ form_start(form, {attr: {class: 'form-events-submit'}}) }}
                     <table class="table table-striped table-dark table-hover">
                         <tbody>
                             <tr>
-                                <th>Prénom</th>
-                                <td id="staff_firstName">
-                                    {{ form_widget(form.firstName) }}
+                                <th>Titre</th>
+                                <td>
+                                    {{ form_widget(form.title) }}
                                 </td>
                             </tr>
                             <tr>
-                                <th>Nom de famille</th>
-                                <td id="staff_lastName">
-                                    {{ form_widget(form.lastName) }}
-                                </td>
-                            </tr>
-                            <tr>
-                                <th>E-mail</th>
-                                <td id="staff_email">
-                                    {{ form_widget(form.email) }}
-                                </td>
-                            </tr>
-                            <tr>
-                                <th>Telephone</th>
-                                <td id="staff_phone">
-                                    {{ form_widget(form.phone) }}
-                                </td>
-                            </tr>
-                            <tr>
-                                <th>Compte Utilisateur</th>
-                                <td id="staff_account">
+                                <th>Créateur·ice</th>
+                                <td>
                                     {{ form_widget(form.user) }}
                                 </td>
                             </tr>
                             <tr>
-                                <th>Responsabilité</th>
-                                <td id="staff_position">
-                                    {{ form_widget(form.position) }}
+                                <th>Description</th>
+                                <td>
+                                    {{ form_widget(form.description) }}
                                 </td>
                             </tr>
                             <tr>
-                                <th>Photo</th>
+                                <th>Type</th>
                                 <td>
-                                    {{ form_widget(form.picture) }}
+                                    {{ form_widget(form.type) }}
+                                </td>
+                            </tr>
+                            <tr>
+                                <th>Date de début</th>
+                                <td>
+                                    {{ form_widget(form.startDate) }}
+                                </td>
+                            </tr>
+                            <tr>
+                                <th>Date de fin</th>
+                                <td>
+                                    {{ form_widget(form.endDate) }}
+                                </td>
+                            </tr>
+                            <tr>
+                                <th>Emplacement</th>
+                                <td>
+                                    {{ form_widget(form.location) }}
                                 </td>
                             </tr>
                         </tbody>
