--- a/templates/admin/players_new.html.twig
+++ b/templates/admin/players_new.html.twig
@@ -10,14 +10,10 @@
         <main class="col-md-8 full-height">
             {{ include('include/admin/_admin_title.html.twig') }}
                 <div class="card admin">
-                <h1 class="display-2">Gestion des Joueurs·euses</h1>
+                <h1 class="display-2">Nouveau·elle Joueurs·euses</h1>
                     {{ form_start(form, {attr: {class: 'form-players-submit'}}) }}
                     <table class="table table-striped table-dark table-hover">
                         <tbody>
-                            <tr>
-                                <th>ID</th>
-                                <td>{{ player.id }}</td>
-                            </tr>
                             <tr>
                                 <th>Prénom</th>
                                 <td>
@@ -60,27 +56,16 @@
                                     {{ form_widget(form.picture) }}
                                 </td>
                             </tr>
-                            <tr>
-                                <th>Statistiques</th>
-                                <td>
-                                    <a href="{{ path('admin_stats_edit', {'id': player.id}) }}">Voir statistiques</a>
-                                </td>
-                            </tr>
                         </tbody>
                     </table>
                         <button class='btn btn-primary' id='admin_save_button' type="submit">Sauvegarder</button>
-                        <button id="admin_delete_button" class="btn btn-outline-warning" form="delete_form">Supprimer</button>
                 {{ form_end(form) }}
-                    <form id="delete_form" method="post" action="{{ path('admin_players_delete', {id: player.id}) }}">
-                        <input type="hidden" name="_method" value="DELETE">
-                        <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ player.id) }}">
-                    </form>
                 </div>
         </main>
     </div>
 </div>
 {% block javascripts %}
     {{ parent() }}
-    {{ include('include/admin/_admin_js.html.twig') }}
+    {{ encore_entry_script_tags('adminLeaveWarning') }}
 {% endblock %}
 {% endblock content %}
