--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,17 +9,11 @@
         {% block stylesheets %}
             <link rel="shortcut icon" href="/img/logo.ico" type="image">
 
-            {# to properly display calendar #}
-            {# {% if condition %} #}
-            {# <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fullcalendar/core@4.1.0/main.min.css">
-            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid@4.1.0/main.min.css">
-            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fullcalendar/timegrid@4.1.0/main.min.css"> #}
-            {# {% endif %} #}
-
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
     </head>
-    <body>
+    <body class="">
+
         {{ include ("include/_header.html.twig") }}
         {{ include ("include/_externalLinks.html.twig") }}
         {% block content %}
