--- a/templates/include/_header.html.twig
+++ b/templates/include/_header.html.twig
@@ -1,5 +1,7 @@
 {% block header %}
-	<header class="d-flex flex-wrap py-3 mb-4 header">
+        {{ include ("include/_breadcrumbs.html.twig") }}
+
+	<header class="d-flex flex-wrap py-3 mb-4 header fixed-top">
 		{# <nav class="navbar"> #}
 			<a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none nav-logo">
 				<svg class="bi me-2" width="0" height="0"><img src="/img/logo.png" height="42px" width="50.59" alt="logo FC Rosheim"/></svg>
