--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -298,7 +298,11 @@ span.leftbar {
     box-sizing: border-box;
     align-items: center;
     padding: 1em;
+    z-index: 2;
+}
 
+.media-perimeter {
+    padding: 0 0em;
 }
 
 .fa-brands {
@@ -382,7 +386,7 @@ span.leftbar {
     opacity: 0;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 900px) {
     .nav-menu {
         background-color: #101010;
         border: solid rgba(180, 0, 0, 0.8) 1px;
@@ -630,10 +634,4 @@ figcaption h3{
     position: fixed;
     top: 25px;
     left: 55px;
-}
-
-@media only screen and (min-width:769px) and (max-width:865px) {
-.breadcrumb-container{
-    display: none;
-}
 }
