--- a/templates/include/_down_arrow.html.twig
+++ b/templates/include/_down_arrow.html.twig
@@ -1,5 +1,5 @@
 {% block downarrow %}
-    <div class="d-flex flex-column ">
+    <div class="d-flex flex-column align-items-center">
     <div class="mt-auto">
     <svg id="down_arrow" data-name="down_arrow" xmlns="http://www.w3.org/2000/svg" 
     xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 85 53" width="5rem" height="5rem"><defs><style>
